--- a/NullSpace SDK 0.1.1.CSharp.csproj
+++ b/NullSpace SDK 0.1.1.CSharp.csproj
@@ -12,7 +12,7 @@
     <ProjectTypeGuids>{E097FAD1-6243-4DAD-9C02-E9B9EFC3FFC1};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Unity Full v3.5</TargetFrameworkProfile>
+    <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
     <CompilerResponseFile>
     </CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
@@ -71,10 +71,10 @@
     <Compile Include="Assets\NullSpace SDK\DefaultImuCalibrator.cs" />
     <Compile Include="Assets\NullSpace SDK\HapticCollider.cs" />
     <Compile Include="Assets\NullSpace SDK\HapticTrigger.cs" />
-    <Compile Include="Assets\NullSpace SDK\NSVRPluginWrapper.cs" />
     <Compile Include="Assets\NullSpace SDK\ImuInterface.cs" />
     <Compile Include="Assets\NullSpace SDK\NSEnums.cs" />
     <Compile Include="Assets\NullSpace SDK\NSManager.cs" />
+    <Compile Include="Assets\NullSpace SDK\NSExtensions.cs" />
     <Compile Include="Assets\NullSpace SDK\RaycastHaptics.cs" />
     <Compile Include="Assets\NullSpace SDK\SuitConnectionArgs.cs" />
     <Compile Include="Assets\NullSpace SDK\SuitIndicator.cs" />
