Integrade new haptics explorer v.06, and update dlls for 1.3-internal-build2

--- a/NullSpace SDK 0.1.1.CSharp.csproj
+++ b/NullSpace SDK 0.1.1.CSharp.csproj
@@ -71,15 +71,20 @@
     <Compile Include="Assets\NullSpace SDK\Demos\Scripts\ContainerHelper\ContainerItem.cs" />
     <Compile Include="Assets\NullSpace SDK\Demos\Scripts\ContainerHelper\PopulateContainer.cs" />
     <Compile Include="Assets\NullSpace SDK\Demos\Scripts\DirectoryToNamespace.cs" />
-    <Compile Include="Assets\NullSpace SDK\Demos\Scripts\Generators.cs" />
-    <Compile Include="Assets\NullSpace SDK\Demos\Scripts\HapticCollider.cs" />
+    <Compile Include="Assets\NullSpace SDK\Demos\Scripts\EnumFlagAttribute.cs" />
+    <Compile Include="Assets\NullSpace SDK\Demos\Scripts\EnumFlagDrawer.cs" />
+    <Compile Include="Assets\NullSpace SDK\Demos\Scripts\FileIOHelper.cs" />
     <Compile Include="Assets\NullSpace SDK\Demos\Scripts\HapticTrigger.cs" />
     <Compile Include="Assets\NullSpace SDK\Demos\Scripts\LibraryElement.cs" />
     <Compile Include="Assets\NullSpace SDK\Demos\Scripts\LibraryHapticControls.cs" />
     <Compile Include="Assets\NullSpace SDK\Demos\Scripts\LibraryManager.cs" />
     <Compile Include="Assets\NullSpace SDK\Demos\Scripts\PackageViewer.cs" />
     <Compile Include="Assets\NullSpace SDK\Demos\Scripts\RaycastHaptics.cs" />
+    <Compile Include="Assets\NullSpace SDK\Demos\Scripts\RegionFlagDrawer.cs" />
+    <Compile Include="Assets\NullSpace SDK\Demos\Scripts\RegionFlagsFieldAttribute.cs" />
+    <Compile Include="Assets\NullSpace SDK\Demos\Scripts\SuitBodyCollider.cs" />
     <Compile Include="Assets\NullSpace SDK\Demos\Scripts\SuitIndicator.cs" />
+    <Compile Include="Assets\NullSpace SDK\Demos\Scripts\SuitRegionSelectorDemo.cs" />
     <Compile Include="Assets\NullSpace SDK\Demos\Scripts\TestHaptics.cs" />
     <Compile Include="Assets\NullSpace SDK\Demos\Scripts\TrackingTest.cs" />
     <Compile Include="Assets\NullSpace SDK\Scripts\DefaultImuCalibrator.cs" />
