Added the plugin version info. Updated the Plugin with new commands. Updated the packaging pane to include description and have better error handling.

--- a/Assets/StreamingAssets/Haptics/NS Core/config.json
+++ b/Assets/StreamingAssets/Haptics/NS Core/config.json
@@ -1,5 +1,6 @@
 {
 	"version" : "0.1.0",
 	"studio" : "NullSpace VR",
-	"package" : "ns"
+	"package" : "ns",
+	"description" : "A basic haptic package with simple sequences."
 }
