--- a/Assets/StreamingAssets/Haptics/NS Demos/config.json
+++ b/Assets/StreamingAssets/Haptics/NS Demos/config.json
@@ -1,7 +1,8 @@
 {
 	"version" : "0.1.0",
 	"studio" : "NullSpace VR",
-	"package" : "ns.demos"
+	"package" : "ns.demos",
+	"description" : "A general collection of demo materials."
 }
 
 
