--- a/Assets/StreamingAssets/Haptics/Your Haptics/config.json
+++ b/Assets/StreamingAssets/Haptics/Your Haptics/config.json
@@ -1,7 +1,8 @@
 {
 	"version" : "0.1.0",
 	"studio" : "My Company Name",
-	"package" : "my"
+	"package" : "my",
+	"description" : "This is an example empty package. Copy it and change the package namespace"
 }
 
 
