Fixing minor Haptics Explorer bugs. Adding the bulk of NS Inventory haptic pack.

--- a/Assets/StreamingAssets/Haptics/NS Death and Dying/config.json
+++ b/Assets/StreamingAssets/Haptics/NS Death and Dying/config.json
@@ -2,7 +2,7 @@
 	"version" : "0.1.0",
 	"studio" : "NullSpace VR",
 	"package" : "ns.dying",
-	"description" : "Everything brutal that can haptically happen to a player during a VR experience"
+	"description" : "Inflict grievous wounds and violent ends upon your player. A collection of injury and death related haptics."
 }
 
 
