--- a/Assets/StreamingAssets/Haptics/NS Demos/config.json
+++ b/Assets/StreamingAssets/Haptics/NS Demos/config.json
@@ -2,7 +2,7 @@
 	"version" : "0.1.0",
 	"studio" : "NullSpace VR",
 	"package" : "ns.demos",
-	"description" : "A general collection of demo materials."
+	"description" : "A simple collection of very basic haptics."
 }
 
 
