--- a/Assets/StreamingAssets/Haptics/Your Haptics/config.json
+++ b/Assets/StreamingAssets/Haptics/Your Haptics/config.json
@@ -2,7 +2,7 @@
 	"version" : "0.1.0",
 	"studio" : "My Company Name",
 	"package" : "my",
-	"description" : "This is an example empty package. Copy it and change the package namespace"
+	"description" : "This is an example empty package. Copy it and change the package namespace."
 }
 
 
